--- a/contato.html
+++ b/contato.html
@@ -47,13 +47,13 @@
 										<h2>Pelas Redes Sociais</h2>
 									</header>
 									<ul class="social">
-										<li><a class="icon fa-facebook" href="http://facebook.com/fdseduardo"target="_blank"><span class="label">Facebook</span></a></li>
-										<li><a class="icon fa-linkedin" href="https://www.linkedin.com/in/fdseduardo/"target="_blank"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon fa-facebook" href="http://facebook.com/truebehindedu"target="_blank"><span class="label">Facebook</span></a></li>
+										<li><a class="icon fa-linkedin" href="https://www.linkedin.com/in/frontedu/"target="_blank"><span class="label">LinkedIn</span></a></li>
 									</ul>
                                 
 <form name="formulario" action="http://scripts.redehost.com.br/formmail.aspx" method="post">
 <input type=hidden name="destino" value="fdseduardo@live.com">
-<input type=hidden name="enviado" href="http://fdseduardo.cf/">
+<input type=hidden name="enviado" href="#">
 <p><b>Nome:</b><br>
 <input type=text name="nome" size="45"></p><br>
 <p><b>Email:</b><br>
@@ -79,7 +79,7 @@
 								<!-- Direitos -->
 									<div id="copyright">
 										<ul class="links">
-										  <li>&copy; fdseduardo. Todos direitos reservados.</li>
+										  <li>&copy; @frontedu. Todos direitos reservados.</li>
 										</ul>
 									</div>
 
