--- a/sobremim.html
+++ b/sobremim.html
@@ -55,7 +55,7 @@
 								<!-- Direitos -->
 									<div id="copyright">
 										<ul class="links">
-										  <li>&copy; fdseduardo. Todos direitos reservados.</li>
+										  <li>&copy; @frontedu. Todos direitos reservados.</li>
 										</ul>
 									</div>
 
