--- a/contato.html
+++ b/contato.html
@@ -79,7 +79,7 @@
 								<!-- Direitos -->
 									<div id="copyright">
 										<ul class="links">
-										  <li>&copy; @frontedu. Todos direitos reservados.</li>
+										  <li>&copy; frontedu. Todos direitos reservados.</li>
 										</ul>
 									</div>
 
